2024-02-17T16:18:51Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7942871877 # 125
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-17
* notice: last 14d: unq all: 196 348
* notice: prev accum: outdated-unq outdated-all / unq all: 2597 6640 / 2858 7011
* notice: next accum: outdated-unq outdated-all / unq all: 2597 6640 / 2867 7023
* notice: prev exec diff / last date diff / accum: unq all: +9 +12 -11 -13 / +36 +46 -0 -0 / 36 46
* notice: removed / changed dates: [] / [2024-02-03 2024-02-17]

2024-02-17T08:17:47Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7940431417 # 124
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-17
* notice: last 14d: unq all: 193 349
* notice: prev accum: outdated-unq outdated-all / unq all: 2597 6640 / 2831 6977
* notice: next accum: outdated-unq outdated-all / unq all: 2597 6640 / 2858 7011
* notice: prev exec diff / last date diff / accum: unq all: +27 +34 -16 -21 / +27 +34 -0 -0 / 27 34
* notice: removed / changed dates: [] / [2024-02-03 2024-02-17]

2024-02-17T01:07:15Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7938183082 # 123
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-17
* notice: last 14d: unq all: 185 336
* notice: prev accum: outdated-unq outdated-all / unq all: 2576 6614 / 2831 6977
* notice: next accum: outdated-unq outdated-all / unq all: 2597 6640 / 2831 6977
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +28 +36 -0 -1 / 28 35
* notice: removed / changed dates: [2024-02-02] / [2024-02-03]

2024-02-15T16:19:28Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7919000532 # 119