@@ -1,27 +1,18 @@
 {
-  "timestamp" : "2024-02-17T16:18:51Z",
-  "count_outdated" : 6640,
-  "uniques_outdated" : 2597,
+  "timestamp" : "2024-02-18T01:11:49Z",
+  "count_outdated" : 6676,
+  "uniques_outdated" : 2625,
   "count" : 7023,
   "uniques" : 2867,
   "clones" : [
     {
-      "timestamp": "2024-02-03T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 36 ],
-      "count_decinc": [ 35, 36 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 28 ],
-      "uniques_decinc": [ 27, 28 ]
-    },
-    {
       "timestamp": "2024-02-04T00:00:00Z",
-      "count": 48,
-      "count_minmax": [ 47, 48 ],
-      "count_decinc": [ 0, 48 ],
-      "uniques": 29,
-      "uniques_minmax": [ 29, 29 ],
-      "uniques_decinc": [ 0, 29 ]
+      "count": 36,
+      "count_minmax": [ 36, 48 ],
+      "count_decinc": [ 12, 48 ],
+      "uniques": 21,
+      "uniques_minmax": [ 21, 29 ],
+      "uniques_decinc": [ 8, 29 ]
     },
     {
       "timestamp": "2024-02-05T00:00:00Z",
