@@ -1,16 +1,11 @@
 {
-  "count": 348,
-  "uniques": 196,
+  "count": 335,
+  "uniques": 189,
   "clones": [
     {
-      "timestamp": "2024-02-03T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2024-02-04T00:00:00Z",
-      "count": 48,
-      "uniques": 29
+      "count": 36,
+      "uniques": 21
     },
     {
       "timestamp": "2024-02-05T00:00:00Z",
